[package]
name = "l"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
cfg-if = "1.0.0"
pest = "2.5.2"
pest_derive = "2.4.0"
rayon = "1.5.3"
rustyline = "14"
debug_print = "1.0.0"
clap = { version = "4.0.18", features = ["derive"] }

[lib]
path = "src/lib.rs"

[[bin]]
name = "link"
test = false

[[bin]]
name = "repl"
test = false
